# stable-baselines3-extensions

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
stable_baselines3_extensions/: __init__.py
stable_baselines3_extensions/common/: callbacks.py  lr_schedules.py  utils.py
stable_baselines3_extensions/her/: her_replay_buffer.py
tests/: test_callbacks.py  test_her.py
